--- a/src/app/views/products/index.html.erb
+++ b/src/app/views/products/index.html.erb
@@ -1,31 +1,33 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Vendor</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<!--<p id="notice"><%#= notice %></p>-->
 
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.price %></td>
-        <td><%= product.vendor %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<!--<h1>Products</h1>-->
 
-<br>
+<!--<table>-->
+<!--  <thead>-->
+<!--  <tr>-->
+<!--    <th>Name</th>-->
+<!--    <th>Price</th>-->
+<!--    <th>Vendor</th>-->
+<!--    <th colspan="3"></th>-->
+<!--  </tr>-->
+<!--  </thead>-->
 
-<%= link_to 'New Product', new_product_path %>
+<!--  <tbody>-->
+  <%# @products.each do |product| %>
+<!--    <tr>-->
+<!--      <td><%#= product.name %></td>-->
+<!--      <td><%#= product.price %></td>-->
+<!--      <td><%#= product.vendor %></td>-->
+<!--      <td><%#= link_to 'Show', product %></td>-->
+<!--      <td><%#= link_to 'Edit', edit_product_path(product) %></td>-->
+<!--      <td><%#= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>-->
+<!--    </tr>-->
+  <%# end %>
+<!--  </tbody>-->
+<!--</table>-->
+
+<!--<br>-->
+
+<%#= link_to 'New Product', new_product_path %>
